# infra-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
base/: Cargo.toml
base/examples/: assert_true_example.rs  async_println.rs  figment_example.rs  result_error_example.rs  retry_test.rs  rkyv_test.rs  rkyv_test_value_macro.rs  tokio_util_example.rs  tracing_rolling_file_example.rs
base/src/: lib.rs  logger.rs  macros.rs
base/src/codec/: bincode.rs  error.rs  mod.rs  rkyv.rs
base/src/config/: local.rs  mod.rs
base/src/result/: code.rs  error.rs  mod.rs  resp.rs
base/src/runtimes/: mod.rs  rayon.rs  task_util.rs  tokio.rs
base/src/tools/: retry.rs
base/src/types/: mod.rs  primitives.rs  primitives_bincode.rs  simple_map.rs  task.rs
base/src/utils/: mod.rs  str_util.rs  time.rs  uuid.rs  vec_util.rs
base/src/validator/: mod.rs
cache/: Cargo.toml
cache/examples/: test_impl_schema_bin_codec.rs
cache/src/: error.rs  lib.rs  lock.rs  schema.rs
cache/src/memory/: cache.rs  mod.rs
cache/src/schema_codec/: bincode.rs  mod.rs
cli/: Cargo.toml
cli/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
examples/axum-resp-demo/: Cargo.toml
examples/axum-resp-demo/src/: main.rs
examples/clap_cli_demo/: Cargo.toml
examples/clap_cli_demo/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/examples/: sqlx_migrate_test.rs
examples/demo/migrations/: 20250924071042_private_jobs_status.sql
examples/demo/src/: main.rs
examples/infra-demos/: Cargo.toml
examples/infra-demos/examples/: tokio_test.rs
examples/infra-demos/src/: main.rs
examples/sea-orm-sqlx-demo/: Cargo.toml
examples/sea-orm-sqlx-demo/examples/: server_version_test.rs  sqlx_migrate_test.rs
examples/sea-orm-sqlx-demo/src/: lib.rs  main.rs
examples/test-config/: Cargo.toml
examples/test-config/src/: config.rs  lib.rs
nacos/: Cargo.toml
nacos/examples/: nacos_client_move.rs  nacos_config_client.rs
nacos/src/: client.rs  core.rs  lib.rs  service.rs  types.rs
rksdb/: Cargo.toml
rksdb/examples/: bincode_codec_example.rs  ttl_example.rs
rksdb/rksdb-cfg/: Cargo.toml
rksdb/rksdb-cfg/src/: lib.rs
rksdb/src/: codec.rs  errors.rs  lib.rs  rksdb_config.rs  rocksdb_opts.rs
rksdb/src/cfg/: mod.rs  rksdb_config.rs
rksdb/src/rdb_opts/: mod.rs
rksdb/src/schemadb/: batch.rs  db_impl.rs  iterator.rs  mod.rs  schema.rs  utils.rs
rksdb/src/schemadb/ttl/: mod.rs  schedule.rs
rksdb/tests/: db.rs  iterator_test.rs
sql/: Cargo.toml  README.md
sql/src/: db_tx.rs  error.rs  lib.rs
sql/src/cfgs/: mod.rs  pgsql.rs  sqlite.rs
sql/src/macros/: delegate.rs  mod.rs
sql/src/sea_ext/: mod.rs  page.rs  pgsql.rs  uint_types.rs
sql/src/utils/: big_decimal.rs  mod.rs
utils/: Cargo.toml
utils/src/: error.rs  http.rs  lib.rs
utils/src/bignum/: mod.rs
utils/src/chrono/: date_util.rs  mod.rs  serde_datetime.rs
utils/src/chrono_util/: mod.rs
web/: Cargo.toml
web/axum-resp-macro/: Cargo.toml
web/axum-resp-macro/src/: lib.rs
web/src/: lib.rs
web/src/http/: error.rs  mod.rs  trace.rs
web/src/result/: axum.rs  error.rs  mod.rs  pagination.rs
