[workspace.package]
name = "infra-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alon"]
repository = "https://github.com/Alonoril/infra-rs"

[workspace]
resolver = "2"
members = [
    "base",
    "cache",
    "sql",
    "web",
    "cli",
    "cache",
    "nacos",
    "examples/demo",
]

[workspace.dependencies]
base-infra = { path = "base" }
cache-infra = { path = "cache" }
web-infra = { path = "web" }
sql-infra = { path = "sql" }
cli-infra = { path = "cli" }
nacos-infra = { path = "nacos" }

clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10" }
dotenvy = "0.15"

# runtime dependencies
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
async-trait = "0.1"

# web dependencies
axum = { version = "0.8", features = ["tower-log"] }
axum-macros = "0.5"
tower = { version = "0.5", features = ["timeout", "buffer", "limit"] }
http = { version = "1.3" }

# openapi dependencies
utoipa = { version = "5.4" }
num_cpus = "1.17"
rayon = "1.10"
anyhow = "1"
thiserror = "2.0"
backtrace = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# sql
ruint = { version = "1.15" }
sea-orm = { version = "1" }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

lazy_static = "1.5.0"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1.3.1", features = ["v4"] }
bincode = "2.0.1"

alloy-primitives = { version = "=1.4.1", features = ["serde"] }

# additional dependencies for service module
reqwest = "0.12"

# nacos
arc-swap = "1.7"
nacos-sdk = { version = "0.5" }
