[workspace.package]
name = "infra-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alon"]
repository = "https://github.com/Alonoril/infra-rs"

[workspace]
resolver = "2"
members = [
    "base",
    "cache",
    "sql",
    "web",
    "web/axum-resp-macro",
    "cli",
    "rksdb",
    "rksdb/rksdb-cfg",
    "nacos",
    "utils",
    "examples/test-config",
    "examples/sea-orm-sqlx-demo",
    "examples/axum-resp-demo", "examples/clap_cli_demo",
]

[workspace.dependencies]
base-infra = { path = "base" }
cache-infra = { path = "cache" }
web-infra = { path = "web" }
axum-resp-macro = { path = "web/axum-resp-macro" }
sql-infra = { path = "sql" }
rksdb-infra = { path = "rksdb" }
rksdb-cfg = { path = "rksdb/rksdb-cfg" }
cli-infra = { path = "cli" }
nacos-infra = { path = "nacos" }
test-config = { path = "examples/test-config" }

clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10" }
dotenvy = "0.15"

# runtime dependencies
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
async-trait = "0.1"

# web dependencies
axum = { version = "0.8", features = ["tower-log"] }
axum-macros = "0.5"
tower = { version = "0.5", features = ["timeout", "buffer", "limit"] }
http = { version = "1.3" }

# openapi dependencies
utoipa = { version = "5.4" }
num_cpus = "1.17"
rayon = "1.10"
anyhow = "1"
thiserror = "2.0"
#backtrace = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# sql
ruint = { version = "1.15" }
sea-orm = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "chrono"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4" }
lazy_static = "1.5.0"
moka = { version = "0.12", features = ["future"] }
# foyer = "0.21-dev"
uuid = { version = "1.3.1", features = ["v4"] }
bincode = "2.0.1"

# rkyv
rkyv = "0.8"
rkyv_derive = "0.8"
rancor = "0.1"


bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "18f1688c5d32026e68b410420671c6b146c3f639" }
rocksdb = "0.24"
dunce = "1"
tokio-test = "0.4"

alloy-primitives = { version = "=1.4.1", features = ["serde"] }

# additional dependencies for service module
reqwest = "0.12"

# nacos
arc-swap = "1.7"
nacos-sdk = { version = "=0.4.3" }
