[package]
name = "base-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
thiserror.workspace = true
backtrace.workspace = true
serde.workspace = true
uuid.workspace = true
figment = { workspace = true, features = ["env", "yaml", "toml"] }


[features]
tokio-pool = ["tokio", "num_cpus"]
rayon-pool = ["rayon"]

[dependencies.http]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true
features = ["io-util"]

[dependencies.num_cpus]
workspace = true
optional = true

[dependencies.rayon]
workspace = true
optional = true

[dependencies.bincode]
workspace = true
optional = true

[dependencies.alloy-primitives]
workspace = true
optional = true


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
serde_json.workspace = true