[package]
name = "base-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
thiserror.workspace = true
backtrace.workspace = true
serde.workspace = true
uuid.workspace = true
figment = { workspace = true, features = ["env", "yaml", "toml"] }
rkyv = { workspace = true, optional = true }
rancor = { workspace = true, optional = true }
rkyv_derive = { workspace = true, optional = true }

[features]
tokio-pool = ["tokio", "num_cpus"]
rayon-pool = ["rayon"]
rkyv-codec = ["rkyv", "rancor", "rkyv_derive"]

[dependencies.http]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true
features = ["io-util"]

[dependencies.num_cpus]
workspace = true
optional = true

[dependencies.rayon]
workspace = true
optional = true

[dependencies.bincode]
workspace = true
optional = true


[dependencies.alloy-primitives]
workspace = true
optional = true


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
serde_json.workspace = true
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
base-infra = {workspace = true, features = ["tokio-pool", "rkyv-codec"]}