[package]
name = "http-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true, features = ["tokio-pool", "bincode"] }

anyhow.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["json"] }
