[package]
name = "base-util"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true, features = ["tokio-pool", "bincode"] }

anyhow.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
