[package]
name = "web-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true, features = ["http"] }
sql-infra = { workspace = true }

axum.workspace = true
axum-macros.workspace = true
http.workspace = true
tower.workspace = true
#tower-http.workspace = true

tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
#backtrace.workspace = true
serde.workspace = true
lazy_static.workspace = true

[dependencies.utoipa]
workspace = true
optional = true


[dev-dependencies]
