[package]
name = "clap-cli-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cli-infra = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt", "rt-multi-thread", "macros"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }