[package]
name = "example-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true, features = ["tokio-pool"] }
cli-infra = { workspace = true }
sql-infra = { workspace = true, features = ["sqlite"] }

clap = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt", "rt-multi-thread", "macros"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }

# sql
sea-orm = { workspace = true, features = ["sqlx-sqlite", "with-bigdecimal", "with-chrono", "debug-print", "sqlite-use-returning-for-3_35"] }
sqlx.workspace = true
