[package]
name = "sea-orm-sqlx-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true, features = ["tokio-pool"] }
cli-infra = { workspace = true }
sql-infra = { workspace = true, features = ["pgsql", "sqlite"] }
test-config.workspace = true

clap = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt", "rt-multi-thread", "macros"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }

# sql
sea-orm = { workspace = true, features = ["sqlx-postgres", "sqlx-sqlite", "with-bigdecimal", "with-chrono", "debug-print", "sqlite-use-returning-for-3_35"] }
#sea-orm = { version = "1", features = ["with-bigdecimal", "with-chrono", "debug-print", "sqlx-postgres"] }

sqlx.workspace = true
