[package]
name = "test-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true, features = ["tokio-pool"] }
cli-infra = { workspace = true }
sql-infra = { workspace = true, features = ["pgsql", "sqlite"] }

clap = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
